<resources>
    <string name="app_name">Schedule a handyman</string>
    <string name="title_string">Please select a service</string>
    <string name="electrician_tv">Electrician</string>
    <string name="plumber_tv">Plumber</string>
    <string name="exterminator_tv">Exterminator</string>
    <string name="mechanic_tv">Mechanic</string>
    <string name="selected_service_tv">Service selected -</string>
    <string name="info_fill_tv">Contact information:</string>
    <string name="name_tv">Full name</string>
    <string name="phone_tv">Phone number</string>
    <string name="day_selection">Tap to select day</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="hrs_range_tv">Select time:</string>
    <string name="visit_tv">Schedule a visit:</string>
    <string name="notes_tv">Enter number of notes</string>
    <string name="finish_btn">Finish</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn">OK</string>
    <string name="day_helper">Day of the following week</string>
    <string name="final_screen">Request submitted</string>
    <string name="new_note_hint">Write a note</string>
    <string name="missing_hrs_toast">Please select time</string>
    <string name="main_screen_btn">Back to main screen</string>
    <string name="summery_name">Name:</string>
    <string name="summery_phone">Phone:</string>
    <string name="name_error">Invalid name</string>
    <string name="required">Required*</string>
    <string name="rating">Rate us</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="morning_radio_selection">Morning hours selected</string>
    <string name="noon_radio_selected">Noon hours selected</string>
    <string name="spinner_toast">selected</string>
</resources>