<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    android:id="@+id/scroll_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="3dp"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_service_tv"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:id="@+id/info_activity_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_fill_tv"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="2dp"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            app:boxBackgroundColor="@color/custom_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/ic_person"
            app:hintTextColor="@color/custom_blue"
            android:hint="@string/name_tv">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/name_et"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_field"
            app:boxBackgroundColor="@color/custom_grey"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/ic_phone"
            app:hintTextColor="@color/custom_blue"
            android:hint="@string/phone_tv">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/phone_et"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="3dp"
            android:text="@string/visit_tv"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/day_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:boxBackgroundColor="@color/custom_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:helperText="@string/day_helper"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_day"
            app:hintTextColor="@color/custom_blue"
            android:hint="@string/day_selection">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/day_tv"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hrs_range_tv"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/hrs_rg">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="09:00 - 12:00"
                android:id="@+id/morning_radio"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="12:00 - 16:00"
                android:id="@+id/noon_radio"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxBackgroundColor="@color/custom_grey"
                app:hintTextColor="@color/custom_blue"
                android:hint="@string/notes_tv">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/notes_et"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/ok_btn"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/service_name_btn"
                android:textSize="20sp"
                android:id="@+id/ok_btn"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/extra_notes_layout"
            android:orientation="vertical"
            android:padding="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finish_btn"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/service_name_btn"
                android:textSize="20sp"
                android:id="@+id/finish_btn"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_btn"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/service_name_btn"
                android:textSize="20sp"
                android:id="@+id/cancel_btn"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>